fix: validate book email
